# serializer version: 1
# name: test_visibilities_default[admin-visibility_map0][AnalyticsTable]
  list([
    tuple(
      'live-five-term',
    ),
  ])
# ---
# name: test_visibilities_default[admin-visibility_map0][Answer]
  list([
    tuple(
      'review-document-decision',
      'review-document-decision-continue',
    ),
    tuple(
      'review-document-decision',
      'review-document-decision-continue',
    ),
    tuple(
      'review-document-decision',
      'review-document-decision-continue',
    ),
    tuple(
      'suggest-adult-allow',
      'foo',
    ),
    tuple(
      'suggest-adult-allow',
      'foo',
    ),
    tuple(
      'suggest-adult-allow',
      'foo',
    ),
    tuple(
      'verteilplan-nr',
      'verteilplan-nr-vp-2021',
    ),
  ])
# ---
# name: test_visibilities_default[admin-visibility_map0][Case]
  list([
    tuple(
      'access',
      'circulation',
    ),
    tuple(
      'access',
      'document-review',
    ),
    tuple(
      'circulation',
      'circulation',
    ),
    tuple(
      'circulation',
      'document-review',
    ),
    tuple(
      'only admin',
      'circulation',
    ),
    tuple(
      'only admin',
      'document-review',
    ),
  ])
# ---
# name: test_visibilities_default[admin-visibility_map0][Document]
  list([
    tuple(
      'circulation',
    ),
    tuple(
      'circulation',
    ),
    tuple(
      'circulation',
    ),
    tuple(
      'circulation-decision',
    ),
    tuple(
      'document-review',
    ),
    tuple(
      'document-review',
    ),
    tuple(
      'document-review',
    ),
    tuple(
      'review-document',
    ),
    tuple(
      'review-document',
    ),
    tuple(
      'review-document',
    ),
  ])
# ---
# name: test_visibilities_default[admin-visibility_map0][Form]
  list([
    tuple(
      'additional-data-form',
    ),
    tuple(
      'advance-credits-form',
    ),
    tuple(
      'body-perhaps',
    ),
    tuple(
      'circulation-form',
    ),
    tuple(
      'decision-and-credit-form',
    ),
    tuple(
      'define-amount-form',
    ),
    tuple(
      'quittungen',
    ),
    tuple(
      'review-document-form',
    ),
  ])
# ---
# name: test_visibilities_default[admin-visibility_map0][Question]
  list([
    tuple(
      'additional-data-adresse',
    ),
    tuple(
      'additional-data-bank',
    ),
    tuple(
      'additional-data-bank-town',
    ),
    tuple(
      'additional-data-fibu',
    ),
    tuple(
      'additional-data-iban',
    ),
    tuple(
      'additional-data-name',
    ),
    tuple(
      'additional-data-quittungen',
    ),
    tuple(
      'additional-data-row-quittung',
    ),
    tuple(
      'additional-data-text',
    ),
    tuple(
      'advance-credit-amount-float',
    ),
    tuple(
      'circulation-comment',
    ),
    tuple(
      'circulation-decision',
    ),
    tuple(
      'decision-and-credit-decision',
    ),
    tuple(
      'define-amount-amount-float',
    ),
    tuple(
      'define-amount-decision',
    ),
    tuple(
      'dossier-nr',
    ),
    tuple(
      'gesprochener-rahmenkredit',
    ),
    tuple(
      'review-document-decision',
    ),
    tuple(
      'sektion',
    ),
    tuple(
      'submit-button',
    ),
    tuple(
      'suggest-adult-allow',
    ),
    tuple(
      'verteilplan-nr',
    ),
  ])
# ---
# name: test_visibilities_default[admin-visibility_map0][WorkItem]
  list([
    tuple(
      'circulation',
      'document-review',
    ),
    tuple(
      'circulation',
      'document-review',
    ),
    tuple(
      'circulation',
      'document-review',
    ),
    tuple(
      'circulation-decision',
      'circulation',
    ),
    tuple(
      'finish-circulation',
      'circulation',
    ),
    tuple(
      'finish-circulation',
      'circulation',
    ),
    tuple(
      'finish-circulation',
      'circulation',
    ),
    tuple(
      'invite-to-circulation',
      'circulation',
    ),
    tuple(
      'invite-to-circulation',
      'circulation',
    ),
    tuple(
      'invite-to-circulation',
      'circulation',
    ),
    tuple(
      'review-document',
      'document-review',
    ),
    tuple(
      'review-document',
      'document-review',
    ),
    tuple(
      'review-document',
      'document-review',
    ),
    tuple(
      'submit-document',
      'document-review',
    ),
    tuple(
      'submit-document',
      'document-review',
    ),
    tuple(
      'submit-document',
      'document-review',
    ),
  ])
# ---
# name: test_visibilities_default[test-visibility_map1][AnalyticsTable]
  list([
  ])
# ---
# name: test_visibilities_default[test-visibility_map1][Answer]
  list([
    tuple(
      'review-document-decision',
      'review-document-decision-continue',
    ),
    tuple(
      'review-document-decision',
      'review-document-decision-continue',
    ),
    tuple(
      'suggest-adult-allow',
      'foo',
    ),
    tuple(
      'suggest-adult-allow',
      'foo',
    ),
  ])
# ---
# name: test_visibilities_default[test-visibility_map1][Case]
  list([
    tuple(
      'access',
      'document-review',
    ),
    tuple(
      'circulation',
      'circulation',
    ),
    tuple(
      'circulation',
      'document-review',
    ),
  ])
# ---
# name: test_visibilities_default[test-visibility_map1][Document]
  list([
    tuple(
      'circulation-decision',
    ),
    tuple(
      'document-review',
    ),
    tuple(
      'document-review',
    ),
    tuple(
      'review-document',
    ),
  ])
# ---
# name: test_visibilities_default[test-visibility_map1][Form]
  list([
    tuple(
      'additional-data-form',
    ),
    tuple(
      'advance-credits-form',
    ),
    tuple(
      'body-perhaps',
    ),
    tuple(
      'circulation-form',
    ),
    tuple(
      'decision-and-credit-form',
    ),
    tuple(
      'define-amount-form',
    ),
    tuple(
      'quittungen',
    ),
    tuple(
      'review-document-form',
    ),
  ])
# ---
# name: test_visibilities_default[test-visibility_map1][Question]
  list([
    tuple(
      'additional-data-adresse',
    ),
    tuple(
      'additional-data-bank',
    ),
    tuple(
      'additional-data-bank-town',
    ),
    tuple(
      'additional-data-fibu',
    ),
    tuple(
      'additional-data-iban',
    ),
    tuple(
      'additional-data-name',
    ),
    tuple(
      'additional-data-quittungen',
    ),
    tuple(
      'additional-data-row-quittung',
    ),
    tuple(
      'additional-data-text',
    ),
    tuple(
      'advance-credit-amount-float',
    ),
    tuple(
      'circulation-comment',
    ),
    tuple(
      'circulation-decision',
    ),
    tuple(
      'decision-and-credit-decision',
    ),
    tuple(
      'define-amount-amount-float',
    ),
    tuple(
      'define-amount-decision',
    ),
    tuple(
      'dossier-nr',
    ),
    tuple(
      'gesprochener-rahmenkredit',
    ),
    tuple(
      'review-document-decision',
    ),
    tuple(
      'sektion',
    ),
    tuple(
      'submit-button',
    ),
    tuple(
      'suggest-adult-allow',
    ),
    tuple(
      'verteilplan-nr',
    ),
  ])
# ---
# name: test_visibilities_default[test-visibility_map1][WorkItem]
  list([
    tuple(
      'circulation',
      'document-review',
    ),
    tuple(
      'circulation',
      'document-review',
    ),
    tuple(
      'circulation-decision',
      'circulation',
    ),
    tuple(
      'review-document',
      'document-review',
    ),
    tuple(
      'review-document',
      'document-review',
    ),
    tuple(
      'submit-document',
      'document-review',
    ),
    tuple(
      'submit-document',
      'document-review',
    ),
  ])
# ---
